# Alpha-Discovery

./: README.md  fixed_alpha_factor_results.csv  main.py  register_signal.py  test_client.py
api/: app.py
rust_factors/: Cargo.toml  pyproject.toml
rust_factors/src/: lib.rs
scripts/: generate_features.py  load_ohlcv_to_postgres.py
sdk/: backtester.py  factor_dataset.py
strategy_cpp/: CMakeLists.txt  bindings.cpp  strategy.cpp
